<resources>
    <string name="app_name">TTA_Ejemplo</string>
    <string name="title_activity_login">Alumno de TTA</string>
    <string name="title_activity_menu">Evaluación de TTA</string>
    <string name="title_activity_test">Nuevo Test</string>
    <string name="title_activity_exercise">Nuevo Ejercicio</string>

    <!--Paths-->
    <string name="path_base">http://u017633.ehu.eus:28080/ServidorTta/rest/tta/</string>
    <string name="Userstatus">getStatus</string>

    <!-- Features-->
    <string name="no_micro">No tienes Microfono O.O</string>
    <string name="no_camera">No tienes Camara</string>
    <string name="no_app">No tienes ninguna app, para esta función</string>

    <!-- Strings related to login -->
    <string name="prompt_dni">Introduce DNI</string>
    <string name="prompt_password">Introduce Password</string>
    <string name="action_sign_in">Acceder</string>
    <string name="login_user">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--Strings of menu-->
    <string name="button_newtest">Nuevo Test</string>
    <string name="button_newexer">Nuevo Ejercicio</string>
    <string name="button_seguimiento">Seguimiento</string>
    <!--Strings Test-->
    <string name="button_send">Enviar</string>
    <string name="button_hint">Ver Ayuda</string>
    <string name="toast_fail">Has fallado!</string>
    <string name="toast_success">Has Acertado!</string>

    <!--Strings Exercise-->
    <string name="button_send_file">Enviar Fichero</string>
    <string name="button_take_photo">Sacar foto</string>
    <string name="button_record_audio">Grabar Audio</string>
    <string name="button_record_video">Grabar Video</string>
</resources>
