<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    tools:context="ejemplo.tta.intel.ehu.eus.tta_ejemplo.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:columnCount="2">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/textlog"
            android:text="@string/login_user"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_dni"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/textpass"
            android:text="@string/login_pass"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />




    </GridLayout>
    <Button
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:onClick="login">
        </Button>

</LinearLayout>
